update to landing page

--- a/themes/demo/pages/home.htm
+++ b/themes/demo/pages/home.htm
@@ -1,1 +1,13 @@
-<h1>Pimp My Cause rebuild site!!</h1>
+title = "Demonstration"
+url = "/"
+layout = "default"
+==
+<div class="jumbotron">
+    <div class="container">
+        {% content "welcome.htm" %}
+    </div>
+</div>
+
+<div class="container">
+<iframe src="//giphy.com/embed/wbANIdDaDtpgQ" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/swag-mr-gif-wbANIdDaDtpgQ">via GIPHY</a></p>
+</div>
