--- a/themes/demo/pages/demo.htm
+++ b/themes/demo/pages/demo.htm
@@ -10,7 +10,7 @@ layout = "default"
 
 <div class="container">
 
-    <div class="page-header">
+    <!-- <div class="page-header">
         <h2>Overview <small>Basic concepts</small></h2>
     </div>
     <p>
@@ -20,7 +20,7 @@ layout = "default"
     </p>
 
     <!-- Layouts -->
-    <h3>Layouts</h3>
+    <!--<h3>Layouts</h3>
     <p class="lead">
         <i class="icon-th-large"></i> &nbsp; Layouts define the page scaffold.
     </p>
@@ -35,7 +35,7 @@ layout = "default"
     <hr />
 
     <!-- Pages -->
-    <h3>Pages</h3>
+    <!--<h3>Pages</h3>
     <p class="lead">
         <i class="icon-copy"></i> &nbsp; Pages hold the content for each URL.
     </p>
@@ -49,7 +49,7 @@ layout = "default"
     <hr />
 
     <!-- Partials -->
-    <h3>Partials</h3>
+    <!--<h3>Partials</h3>
     <p class="lead">
         <i class="icon-tags"></i> &nbsp; Partials contain reusable chunks of HTML markup.
     </p>
@@ -64,7 +64,7 @@ layout = "default"
     <hr />
 
     <!-- Content blocks -->
-    <h3>Content blocks</h3>
+    <!--<h3>Content blocks</h3>
     <p class="lead">
         <i class="icon-font"></i> &nbsp; Content blocks are text or HTML blocks that can be edited separately from the page or layout.
     </p>
@@ -77,7 +77,7 @@ layout = "default"
     <hr />
 
     <!-- Placeholders -->
-    <h3>Placeholders</h3>
+    <!--<h3>Placeholders</h3>
     <p class="lead">
         <i class="icon-bookmark"></i> &nbsp; Placeholders allow pages to inject content to a layout.
     </p>
@@ -100,7 +100,7 @@ layout = "default"
     <hr />
 
     <!-- Assets -->
-    <h3>Assets</h3>
+    <!--<h3>Assets</h3>
     <p class="lead">
         <i class="icon-picture"></i> &nbsp; Assets are resource files like images and stylesheets.
     </p>
@@ -118,4 +118,4 @@ layout = "default"
         <p><a href="{{ 'ajax'|page }}" class="btn btn-lg btn-default">Continue to AJAX framework</a></p>
     </div>
 
-</div>
+</div> -->
