--- a/themes/demo/pages/home.htm
+++ b/themes/demo/pages/home.htm
@@ -9,5 +9,5 @@ layout = "default"
 </div>
 
 <div class="container">
-<iframe src="//giphy.com/embed/wbANIdDaDtpgQ" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/swag-mr-gif-wbANIdDaDtpgQ">via GIPHY</a></p>
+<iframe src="//giphy.com/embed/wbANIdDaDtpgQ" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 </div>
