--- a/themes/demo/pages/demo.htm
+++ b/themes/demo/pages/demo.htm
@@ -4,7 +4,7 @@ layout = "default"
 ==
 <div class="jumbotron">
     <div class="container">
-        {% content "welcome.htm" %}
+        <!--{% content "welcome.htm" %}-->
     </div>
 </div>
 
