--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,8 @@
 	</head>
 	<body>
 		<div id="container">
+			<div id="banner">
+			</div>
 			<nav>
 				<ul>
 					<li>
@@ -19,13 +21,16 @@
 						<a href="about.html">About Us</a>
 					</li>
 					<li>
-						<a href="partners.html">Partners</a>
+						<a href="find-a-cause.html">Find a Cause</a>
 					</li>
 					<li>
-						<a href="whatsnew.html">What's New</a>
+						<a href="find-a-marketer.html">Find a Marketer</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="blog.html">Blog</a>
+					</li>
+					<li>
+						<a href="contact-us.html">Contact Us</a>
 					</li>
 				</ul>
 			</nav>
