--- a/themes/pimp/src/pages/index.html
+++ b/themes/pimp/src/pages/index.html
@@ -11,14 +11,59 @@
         <!-- Panel Hero -->
         <div class="row pnl-hero">
             <div class="large-6 columns">
-                <h1>Join for free</h1>
+                <h2>Join for free</h2>
                 <h4>Start your pro bono marketing project today</h4>
+                
+                <div class="row">
+                    <div class="large-5 columns">
+                        <select>
+                            <option value="dropdown-agent">I'm in ...</option>
+                            <option value="advertising">Advertising</option>
+                            <option value="branding">Branding</option>
+                            <option value="business-development">Business Development</option>
+                            <option value="concept-development">Concept Development</option>
+                            <option value="customer-insight">Customer Insight</option>
+                            <option value="graphic-design">Graphic Design</option>
+                            <option value="marketing">Marketing</option>
+                            <option value="networking">Networking</option>
+                            <option value="photography">Photography</option>
+                            <option value="pr">PR</option>
+                            <option value="seo">SEO</option>
+                            <option value="social-media-marketing">Social Media Marketing</option>
+                            <option value="strategic-marketing">Strategic Marketing</option>
+                            <option value="videography">Videography</option>
+                            <option value="web-development">Web Development</option>
+                        </select>
+
+                        <select>
+                            <option value="dropdown-cause">Seeking ...</option>
+                            <option value="disaster-relief">Disaster Relief</option>
+                            <option value="poverty-alleviation">Poverty Alleviation</option>
+                            <option value="environment">Environment</option>
+                            <option value="education-skills">Education &nbsp; Skills</option>
+                            <option value="animal-welfare">Animal Welfare</option>
+                            <option value="children-youth">Children &nbsp; Youth</option>
+                            <option value="disability">Disability</option>
+                            <option value="health">Health</option>
+                            <option value="food">Food</option>
+                        </select>
+                    </div> <!-- end large-5 columns -->
+                </div> <!-- end row -->
+                
+<!--
+                <div class="row">
+                    <div class="large-4 columns header-sign-in">
+                        <a href="#" class="button round">Continue</a>
+                    </div>
+                </div>
+-->
+
             </div>
             <div class="large-6 columns">
                 <h1>Join for free</h1>
                 <h4>Start your pro bono marketing project today</h4>
             </div>
-        </div>
+        </div> <!-- end row pnl-hero -->
 
         <!-- Panel Marketing -->
         <div class="row pnl-marketing">
