Added all images for the Hero Panel tiles to the /assets/img directory Included a Foundation style Form as example code for Registration page Changed the structure of the navigation menu according to new requirements Added new CSS styling for the components/_tiles.scss file just starting with a simple layout of four picture images

--- a/themes/pimp/assets/form.html
+++ b/themes/pimp/assets/form.html
@@ -51,27 +51,16 @@
                         <ul>
                             <li><a href="#">Meet The Team</a></li>
                             <li><a href="#">How It Works</a></li>
-                            <li><a href="#">Advice For Marketers</a></li>
-                            <li><a href="#">Advice For Causes</a></li>
-                            <li><a href="#">Partner With Us</a></li>
-                            <li><a href="#">Challenges</a></li>
+                            <li><a href="#">Who We Are</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Find a Cause</a>
-                        <ul>
-                            <li><a href="#">Cause Profiles</a></li>
-                            <li><a href="#">Help Wanted Ads</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Find a Cause</a></li>
                     <li><a href="#">Find a Marketer</a></li>
-                    <li><a href="#">Partners</a></li>
-                    <li><a href="#">Blog</a>
-                        <ul>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">Twitter Help Desk</a></li>
-                            <li><a href="#">Expert Interviews</a></li>
-                            <li><a href="#">Hall of Fame</a></li>
-                        </ul>
+                    <li><a href="#">Partnerships</a>
+                    <ul>
+                        <li><a href="#">Become a Partner</a></li>
+                        <li><a href="#">Our Partners</a></li>
+                    </ul>
                     </li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>   
@@ -100,26 +89,15 @@
                                         <ul class="dropdown">
                                             <li><a href="#">Meet The Team</a></li>
                                             <li><a href="#">How It Works</a></li>
-                                            <li><a href="#">Advice For Marketers</a></li>
-                                            <li><a href="#">Advice For Causes</a></li>
-                                            <li><a href="#">Partner With Us</a></li>
-                                            <li><a href="#">Challenges</a></li>
+                                            <li><a href="#">Who We Are</a></li>
                                         </ul>
                                     </li>
-                                    <li class="has-dropdown"><a href="#">Find a Cause</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Cause Profiles</a></li>
-                                            <li><a href="#">Help Wanted Ads</a></li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="#">Find a Cause</a></li>
                                     <li><a href="#">Find a Marketer</a></li>
-                                    <li><a href="#">Partners</a></li>
-                                    <li class="has-dropdown"><a href="#">Blog</a>
+                                    <li class="has-dropdown"><a href="#">Partnerships</a>
                                         <ul class="dropdown">
-                                            <li><a href="#">Forum</a></li>
-                                            <li><a href="#">Twitter Help Desk</a></li>
-                                            <li><a href="#">Expert Interviews</a></li>
-                                            <li><a href="#">Hall of Fame</a></li>
+                                            <li><a href="#">Become a Partner</a></li>
+                                            <li><a href="#">Our Partners</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#">Contact Us</a></li>
@@ -191,7 +169,7 @@
                          ========== -->
                         <div> <!-- wrap the label and error msg in a div and add required to the input -->
                             <label>First Name <small>required</small>
-                                <input type="text" name="FIRST:" placeholder="First Name" required>
+                                <input type="file" name="FIRST:" placeholder="First Name" required>
                             </label>
                             <small class="error">First name is required and should contain only letters</small>
                         </div>
