--- a/themes/pimp/src/pages/form.html
+++ b/themes/pimp/src/pages/form.html
@@ -29,7 +29,7 @@
                          ========== -->
                         <div> <!-- wrap the label and error msg in a div and add required to the input -->
                             <label>First Name <small>required</small>
-                                <input type="text" name="FIRST:" placeholder="First Name" required>
+                                <input type="file" name="FIRST:" placeholder="First Name" required>
                             </label>
                             <small class="error">First name is required and should contain only letters</small>
                         </div>
