--- a/themes/pimp/assets/thanks.html
+++ b/themes/pimp/assets/thanks.html
@@ -51,27 +51,16 @@
                         <ul>
                             <li><a href="#">Meet The Team</a></li>
                             <li><a href="#">How It Works</a></li>
-                            <li><a href="#">Advice For Marketers</a></li>
-                            <li><a href="#">Advice For Causes</a></li>
-                            <li><a href="#">Partner With Us</a></li>
-                            <li><a href="#">Challenges</a></li>
+                            <li><a href="#">Who We Are</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Find a Cause</a>
-                        <ul>
-                            <li><a href="#">Cause Profiles</a></li>
-                            <li><a href="#">Help Wanted Ads</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Find a Cause</a></li>
                     <li><a href="#">Find a Marketer</a></li>
-                    <li><a href="#">Partners</a></li>
-                    <li><a href="#">Blog</a>
-                        <ul>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">Twitter Help Desk</a></li>
-                            <li><a href="#">Expert Interviews</a></li>
-                            <li><a href="#">Hall of Fame</a></li>
-                        </ul>
+                    <li><a href="#">Partnerships</a>
+                    <ul>
+                        <li><a href="#">Become a Partner</a></li>
+                        <li><a href="#">Our Partners</a></li>
+                    </ul>
                     </li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>   
@@ -100,26 +89,15 @@
                                         <ul class="dropdown">
                                             <li><a href="#">Meet The Team</a></li>
                                             <li><a href="#">How It Works</a></li>
-                                            <li><a href="#">Advice For Marketers</a></li>
-                                            <li><a href="#">Advice For Causes</a></li>
-                                            <li><a href="#">Partner With Us</a></li>
-                                            <li><a href="#">Challenges</a></li>
+                                            <li><a href="#">Who We Are</a></li>
                                         </ul>
                                     </li>
-                                    <li class="has-dropdown"><a href="#">Find a Cause</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Cause Profiles</a></li>
-                                            <li><a href="#">Help Wanted Ads</a></li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="#">Find a Cause</a></li>
                                     <li><a href="#">Find a Marketer</a></li>
-                                    <li><a href="#">Partners</a></li>
-                                    <li class="has-dropdown"><a href="#">Blog</a>
+                                    <li class="has-dropdown"><a href="#">Partnerships</a>
                                         <ul class="dropdown">
-                                            <li><a href="#">Forum</a></li>
-                                            <li><a href="#">Twitter Help Desk</a></li>
-                                            <li><a href="#">Expert Interviews</a></li>
-                                            <li><a href="#">Hall of Fame</a></li>
+                                            <li><a href="#">Become a Partner</a></li>
+                                            <li><a href="#">Our Partners</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#">Contact Us</a></li>
