--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -12,20 +12,20 @@
            
             <form id="sign-in" method="POST" action="">
                 <div class="row">
-                     <div class="large-6 large-centered columns">
+                     <div class="medium-6 medium-centered columns">
                          <label for="email">Email:</label>
                          <input type="email" name="email" placeholder="Username" required>
                      </div>
                 </div>
                 <div class="row">
-                    <div class="large-6 large-centered columns">
+                    <div class="medium-6 medium-centered columns">
                          <label for="password">Password:</label>
                          <input type="password" name="password" placeholder="Password">
                          <a href="#">Forgot Password</a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="large-6 large-centered columns">
+                    <div class="medium-6 medium-centered columns">
                         <input class="button right" type="submit" value="Sign in">
                         <a href="create-account.html" class="underline txt-right">Not Registered? Start here</a>
                     </div>
