Deleted .png images and tidied a couple of files

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,7 +18,7 @@
                 <div class="large-6 columns">
                     <div class="row">
                         <div class="small-12 columns h2-hero">
-                            <h2>Join for free</h2>
+                            <h2>Join Us</h2>
                         </div>
                     </div>
                     <div class="row">
